<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@android:color/white">

     <Spinner
        android:id="@+id/fl_sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>
    
    <Button
        android:id="@+id/fl_exam_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fl_sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/fl_exam_choose"
        android:onClick="onChoose" />

    <Button
        android:id="@+id/fl_exam_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fl_exam_choose"
        android:layout_below="@+id/fl_exam_choose"
        android:text="@string/fl_exam_start"
        android:onClick="onStart" />

    <Button
        android:id="@+id/fl_exam_analysis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fl_exam_start"
        android:layout_below="@+id/fl_exam_start"
        android:text="@string/fl_exam_analysis"
        android:onClick="onAnalysis" />

    <Button
        android:id="@+id/fl_exam_correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fl_exam_analysis"
        android:layout_below="@+id/fl_exam_analysis"
        android:text="@string/fl_exam_correct"
        android:onClick="onCorrect" />

    <Button
        android:id="@+id/fl_exam_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fl_exam_correct"
        android:layout_below="@+id/fl_exam_correct"
        android:text="@string/fl_exam_comment"
        android:onClick="onComment" />

</RelativeLayout>