<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/main_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:text="@string/sp_name" />

    <TextView
        android:id="@+id/main_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_tv1"
        android:layout_below="@+id/main_tv1"
        android:layout_marginTop="60dp"
        android:text="@string/sp_password" />

    <EditText
        android:id="@+id/main_et1"
        android:text="teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/main_tv1"
        android:layout_toRightOf="@+id/main_tv1"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:ems="10" >
    </EditText>

    <EditText
        android:id="@+id/main_et2"
        android:text="teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_et1"
        android:layout_alignTop="@+id/main_tv2"
        android:layout_alignRight="@+id/main_et1"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/main_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_et2"
        android:layout_alignRight="@+id/main_et2"
        android:layout_marginTop="27dp"
        android:onClick="onConfirm"
        android:text="@string/comm_confirm" />

</RelativeLayout>