<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/scexam_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:text="@string/comm_exam_name_colon" />

    <TextView
        android:id="@+id/scexam_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/scexam_tv1"
        android:layout_toRightOf="@+id/scexam_tv1"
        android:text="XXXX" />

    <TextView
        android:id="@+id/scexam_tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/scexam_tv1"
        android:layout_toRightOf="@+id/scexam_tv2"
        android:text="@string/comm_exam_totalscore_colon" />

    <TextView
        android:id="@+id/scexam_tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/scexam_tv1"
        android:layout_toRightOf="@+id/scexam_tv3"
        android:text="XXXX" />

    <TextView
        android:id="@+id/scexam_tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/scexam_tv1"
        android:layout_toRightOf="@+id/scexam_tv4"
        android:text="@string/comm_exam_totaltime_colon" />

    <TextView
        android:id="@+id/scexam_tv6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/scexam_tv1"
        android:layout_toRightOf="@+id/scexam_tv5"
        android:text="XXXX" />

    <ListView
        android:id="@+id/scexam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/scexam_tv5"
        android:layout_marginTop="16dp" >
    </ListView>

</RelativeLayout>